# starcom-app

./: .env.example  .gitignore  .primer  .vercelignore  3D Globe SubApp.md  3D_Global_Interface_Cyber_Command.md  ANALYTICS_SETUP.md  ARCHITECTURE-DIAGRAM.md  AUDIT_DOCUMENTATION_INDEX.md  Adding_Bots.md  Advanced Professional Programming Practices.md  BACKUP-DOCUMENTATION.md  BUILD_DEBUGGING_GUIDE.md  Bot Roster SubApp.md  CSS-CONSOLIDATION-SUCCESS-REPORT.md  Comprehensive Guide for Designing and Implementing a Decentralized Nostr-Based MeshNet Architecture.md  DEBUG_CONTROL.md  DEBUG_SIGNATURE_REFERENCE.md  Decentralized Nostr MeshNet RelayNode.md  EMERGENCY-INTERN-DEPLOYMENT.md  Emotional Permutation Framework for Emotional AI Calculations.md  GRANT_ANALYTICS_ACCESS.md  How To Make RSS Web Scraper Bot.md  Initial_Nostr_Project_Setup.md  Instructions for Including a SubNet Architecture within the MeshNet Structure.md  Intel Timeline SubApp.md  Introduction to Using IPFS for the Starcom App.md  LOGGING_CONTROL_SUMMARY.md  Mk2_Basic_RelayNode.md  Mk3_StarcomApp-InstructionManual.md  Net Runner SubApp.md  PHASE1_FINDINGS.md  PHASE2_PRIVACY_CLASSIFICATION.md  PHASE3_API_TECHNICAL_REVIEW.md  PHASE4_ARCHIVED_DOCUMENTATION_AUDIT.md  PHASE5_SOURCE_CODE_DOCUMENTATION_AUDIT.md  PHASE6_FINAL_SECURITY_VALIDATION.md  PRIVACY_REMEDIATION_SUMMARY.md  PRODUCTION_ENV_SETUP.md  PROJECT-OVERVIEW.md  (+67 more)
.data/: listings.json
ai-security-relaynode/: ARCHITECTURE.md  BUILD-SUCCESS-REPORT.md  Cargo.toml  README.md  main.js  package-lock.json  package.json  test_jwt.rs
api/: listings.js  listings.ts  pin.js  purchases.js  purchases.ts
asset development/: png_to_svg.py
backup_logs/: backup_verify_log.txt  starcom-app_backup_20250704_023337_log.txt
dapp/: .onboarding  .vercelignore  BUILD-SUCCESS-REPORT.md  CHAT-SYSTEM-STATUS.md  COMPONENT-ARCHITECTURE-BLUEPRINT.md  Cargo.toml  FINAL-TASK-COMPLETION-REPORT.md  LINKEDIN-CHAT-IMPLEMENTATION-PLAN.md  PHASE3_PROGRESS.md  README.md  STARCOM-GLOBE-V2-INTEGRATION-EXAMPLE.tsx  debug-glb.js  eslint.config.js  jest.config.js  package-lock.json  package.json  playwright.config.ts  test-chat-adapter.sh  test-chat-adapters.sh  test-chat-stabilization.sh  test-securechat-adapter.sh  test-wallet-diagnostic.html  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
docs/: 3D-ASSET-DEBUGGING-GUIDE.md  3D-ASSET-DEPLOYMENT-GUIDE.md  AUTONOMOUS_INTELLIGENCE_PIPELINE_PHASES.md  CENSYS-API-POLICY-UPDATE.md  CENSYS-PLATFORM-MIGRATION-GUIDE.md  CHAT-CONSOLIDATION-DOCUMENTATION-INDEX.md  CHAT-CONSOLIDATION-IMPLEMENTATION.md  CHAT-CONSOLIDATION-MIGRATION-STATUS.md  CHAT-CONSOLIDATION-PLAN.md  CHAT-ERROR-HANDLING-SPECIFICATION.md  CHAT-PERFORMANCE-OPTIMIZATION-SPEC.md  CHAT-TESTING-GUIDE.md  CHAT-TESTING-IMPROVEMENTS.md  CHAT-TESTING-STRATEGY.md  CHAT-USER-ID-HANDLING.md  CSS-CONSOLIDATION-MASTER-PLAN.md  CYBERATTACKS_API_DOCUMENTATION.md  CYBERATTACKS_CODE_REVIEW.md  DEBUG_LOGGING_CONTROL.md  DECENTRALIZATION_TRANSITION.md  DECENTRALIZED-COLLAB-IMPLEMENTATION.md  DECENTRALIZED-COLLABORATION.md  DEPLOYMENT-DEBUG-GUIDE.md  EARTH-ALLIANCE-PANEL-INTEGRATION-SUMMARY.md  GRANT_APPLICATION_REPORT.md  GROUPCHAT-PANEL-INTEGRATION-SUMMARY.md  INTEL-REPORT-ERROR-HANDLING-IMPLEMENTATION-SUMMARY.md  INTEL-REPORT-ERROR-HANDLING-IMPROVEMENT-PLAN.md  INTEL_SYSTEM_PHASE_1_COMPLETION_REPORT_2025-08-03.md  INTEL_SYSTEM_PHASE_2_DATAVAULT_COMPLETE_2025-08-03.md  INTEL_SYSTEM_PHASE_2_WEEK_5-6_COMPLETE_2025-08-03.md  MARKETEXCHANGE-QUANTUM-TRANSFORMATION.md  NETRUNNER-ARCHITECTURE-OVERVIEW.md  NETRUNNER-DATA-FLOW-DIAGRAM.md  NETRUNNER-IMPLEMENTATION-PLAN.md  NETRUNNER-IMPLEMENTATION-ROADMAP-CHANGELOG.md  NETRUNNER-INTEL-ANALYZER-INTEGRATION-COMPLETE.md  NETRUNNER-INTERFACE-AUDIT-COMPLETE.md  NETRUNNER-MONITORING-SPEC.md  NETRUNNER-OSINT-IMPLEMENTATION-GUIDE.md  (+23 more)
public/: analytics-dashboard.html  config.json  globe-interaction-test.html  manifest.webmanifest  robots.txt  sitemap.xml
scripts/: activate-distributed-comms.ts  analyze-test-results.ts  benchmark-arc-reuse-and-error.ts  benchmark-geo-pipeline.ts  benchmark-topology-size.ts  build-topology-borders.ts  build-topology-eez.ts  chat-dev-test-enhanced.js  chat-dev-test.js  chat-mocked-test.js  chat-test-runner.js  code-quality-check.mjs  collaboration-guide.ts  count-satellites.js  fetch-eez-data.ts  final-validation.js  (+29 more)
starcom-mk2-backup/programs/intel-market/: Cargo.toml
starcom-mk2-backup/rust/wasm-ephemeris/loader/: Cargo.toml
starcom-mk2-backup/rust/wasm-ephemeris/wasm-ephemeris-api/: Cargo.toml
starcom-mk2/ai-security-relaynode/: Cargo.toml  Cargo.toml.backup  tauri.conf.json
starcom-mk2/ai-security-relaynode/docs/: DEVELOPMENT-ROADMAP.md
starcom-mk2/ai-security-relaynode/scripts/: fix_build.sh  validate.sh
starcom-mk2/ai-security-relaynode/src/: api_gateway.rs  clean_gateway.rs  config.rs  investigation_api.rs  lib.rs  main.rs  main_legacy_backup.rs  network_coordinator.rs  nostr_relay.rs  security_layer.rs  subnet_manager.rs
starcom-mk2/ai-security-relaynode/tests/integration/: mod.rs
starcom-mk2/rust/crypto-core/: Cargo.toml
starcom-mk2/rust/crypto-core/src/: lib.rs
starcom-mk2/starcom-prototype-mk2/wasm-mini-server/: Cargo.toml  directory-structure.txt
starcom-mk2/starcom-prototype-mk2/wasm-mini-server/src/: api.rs  lib.rs  tests.rs
starcom-mk2/starcom-prototype-mk2/wasm-mini-server/tests/: tests.rs
(+4137 files in other folders)
