[package]
name = "ai-security-relaynode"
version = "0.1.0"
edition = "2021"
description = "AI Security RelayNode - Combined Nostr Relay and IPFS Node for Starcom Teams"
license = "MIT"
repository = "https://github.com/starcom-app/starcom-mk2"

[dependencies]
# Core runtime
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# Tauri for desktop app - specific features to avoid macOS notification issues
tauri = { version = "1.5", features = ["window-all", "path-all", "fs-all", "dialog-all", "process-all", "shell-open"] }

# Nostr protocol dependencies
tokio-tungstenite = "0.20"
futures-util = "0.3"
secp256k1 = "0.28"
sha2 = "0.10"
hex = "0.4"

# Database for event storage
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }

# IPFS node dependencies
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux"] }

# Web API server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Security & encryption
ring = "0.17"
base64 = "0.21"
jsonwebtoken = "9.2"
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"

# Configuration and logging
config = "0.14"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[[bin]]
name = "ai-security-relaynode"
path = "src/main.rs"
