[package]
name = "intel-market"
version = "0.1.0"
description = "Intelligence Exchange Marketplace smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "intel_market"

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
