[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.77", features = ["Request", "RequestInit", "Response", "Window", "IdbDatabase", "IdbOpenDbRequest", "IdbFactory"] }
once_cell = "1.17"
ephemeris = { path = "../ephemeris" }

[dev-dependencies]
wasm-bindgen-test = "0.3"