[package]
name = "wasm-ephemeris-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
ephemeris = { path = "../ephemeris" }
positions = { path = "../positions" }
gravimetrics = { path = "../gravimetrics" }
harmonics = { path = "../harmonics" }
loader = { path = "../loader" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
web-sys = { version = "0.3.77", features = ["Request", "RequestInit", "Response", "Window", "IdbDatabase", "IdbOpenDbRequest", "IdbFactory"] }
